[gd_scene load_steps=19 format=3 uid="uid://b4rwiyvh7y7qk"]

[ext_resource type="Material" uid="uid://y4ol0mki3u1h" path="res://scenes/entities/character.tres" id="1_5g2h5"]
[ext_resource type="PackedScene" uid="uid://blvymffpl5npd" path="res://scenes/map.tscn" id="2_gt47s"]
[ext_resource type="PackedScene" uid="uid://51gl4tp26xr8" path="res://scenes/bg.tscn" id="3_a87uh"]
[ext_resource type="Script" path="res://scenes/hud.gd" id="4_jfxvi"]
[ext_resource type="PackedScene" uid="uid://dmygof706sgp1" path="res://pause_menu.tscn" id="5_vbq6o"]
[ext_resource type="PackedScene" uid="uid://cs4nmk67pnl3q" path="res://scenes/checkpoint.tscn" id="6_0v58n"]
[ext_resource type="PackedScene" uid="uid://cdf011y3wlhce" path="res://scenes/entities/bossnpc.tscn" id="7_i0xay"]
[ext_resource type="PackedScene" uid="uid://xld7e8viee0m" path="res://character_controller_test.tscn" id="8_3lofb"]
[ext_resource type="Script" path="res://scripts/Hitbox.gd" id="9_e7kaa"]
[ext_resource type="Script" path="res://scripts/entity.gd" id="10_k63hh"]
[ext_resource type="Texture2D" uid="uid://dwq5ammtovb3i" path="res://assets/walk1.png" id="11_co85q"]
[ext_resource type="Script" path="res://scripts/Hurtbox.gd" id="12_2y2pk"]
[ext_resource type="PackedScene" uid="uid://cribeoi7ltdur" path="res://environment/moving_platform.tscn" id="13_5mww1"]
[ext_resource type="PackedScene" path="res://environment/rigid_box_2d.tscn" id="14_6bey7"]
[ext_resource type="Script" path="res://scripts/Puzzle1.gd" id="14_w3qe0"]
[ext_resource type="PackedScene" path="res://spikeTrap.tscn" id="15_vtbp8"]
[ext_resource type="PackedScene" uid="uid://bkpqppbxdwsee" path="res://environment/button.tscn" id="16_8q1bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k57n"]
size = Vector2(60, 60)

[node name="Node2D" type="Node2D"]
material = ExtResource("1_5g2h5")

[node name="Node2D" parent="." instance=ExtResource("2_gt47s")]

[node name="Bg" parent="." instance=ExtResource("3_a87uh")]
scroll_offset = Vector2(176.366, 266.627)

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("4_jfxvi")

[node name="PauseMenu" parent="HUD" instance=ExtResource("5_vbq6o")]
visible = false
modulate = Color(0.972549, 1, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Checkpoint" parent="." instance=ExtResource("6_0v58n")]
position = Vector2(186, 161)

[node name="Checkpoint2" parent="." instance=ExtResource("6_0v58n")]
position = Vector2(4509, -351)

[node name="Boss" parent="." node_paths=PackedStringArray("player_character") instance=ExtResource("7_i0xay")]
position = Vector2(614, -18)
player_character = NodePath("../Player")
dialogue_file = "res://assets/dialogues/bossprefight.txt"

[node name="Player" parent="." instance=ExtResource("8_3lofb")]
position = Vector2(236, 121)
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 7
move_velocity = 1000.0
jump_velocity = 1500.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(236, 121)
scale = Vector2(4, 4)
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.13
drag_top_margin = 0.13
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[node name="HitboxFloor" type="Area2D" parent="."]
position = Vector2(0, 5000)
scale = Vector2(100, 1)
script = ExtResource("9_e7kaa")
damage = 9999
can_block = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxFloor"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_1k57n")

[node name="SomethingToHit" type="CharacterBody2D" parent="."]
position = Vector2(5392, 31)
script = ExtResource("10_k63hh")
max_health = 1000
current_health = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="SomethingToHit"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_1k57n")

[node name="SomethingToHit" type="Sprite2D" parent="SomethingToHit"]
position = Vector2(-647, -383)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_co85q")

[node name="Hurtbox" type="Area2D" parent="SomethingToHit" node_paths=PackedStringArray("entity")]
position = Vector2(603, -206)
script = ExtResource("12_2y2pk")
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SomethingToHit/Hurtbox"]
position = Vector2(-1225, -167)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_1k57n")

[node name="Moving Platform" parent="." instance=ExtResource("13_5mww1")]
position = Vector2(1629, -9)

[node name="Crate1" parent="." instance=ExtResource("14_6bey7")]
position = Vector2(1661, -96)
script = null

[node name="Puzzle1" type="Node2D" parent="."]
script = ExtResource("14_w3qe0")

[node name="SpikeTrap3" parent="Puzzle1" instance=ExtResource("15_vtbp8")]
position = Vector2(3391, -304)

[node name="SpikeTrap2" parent="Puzzle1" instance=ExtResource("15_vtbp8")]
position = Vector2(3261, -311)

[node name="SpikeTrap1" parent="Puzzle1" instance=ExtResource("15_vtbp8")]
position = Vector2(3142, -308)

[node name="Button2" parent="Puzzle1" instance=ExtResource("16_8q1bv")]
position = Vector2(-1436, 618)
collision_layer = 4

[node name="Button" parent="Puzzle1" instance=ExtResource("16_8q1bv")]
position = Vector2(-813, -23)
collision_layer = 4

[connection signal="body_shape_entered" from="Puzzle1/Button2" to="Puzzle1" method="_on_button_body_shape_entered"]
[connection signal="body_shape_exited" from="Puzzle1/Button2" to="Puzzle1" method="_on_button_body_shape_exited"]
[connection signal="body_shape_entered" from="Puzzle1/Button" to="Puzzle1" method="_on_button_2_body_shape_entered"]
[connection signal="body_shape_exited" from="Puzzle1/Button" to="Puzzle1" method="_on_button_2_body_shape_exited"]
